--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,8 +11,8 @@
     {{- end }}
     <link rel="shortcut icon" href="/favicon.ico">
 
-    <link href="{{ "webfonts/ptserif/main.css" | absURL }}" rel='stylesheet' type='text/css'>
-    <link href="{{ "webfonts/source-code-pro/main.css" | absURL }}" rel="stylesheet" type="text/css">
+    <link href="/webfonts/ptserif/main.css" rel='stylesheet' type='text/css'>
+    <link href="/webfonts/source-code-pro/main.css" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
     {{ range .Site.Params.customCss -}}
