replace Summary to Description

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,10 +36,7 @@
                     {{ end }}
                 </div>
                 <div class="article-entry" itemprop="articleBody">
-                    <p>
-                        {{ if .Params.featuredImage }}<img src="{{.Params.featuredImage}}"><br>{{ end }}
-                    {{ .Summary }}
-                    </p>
+                    <p>{{ .Description }}</p>
                     <p class="article-more-link">
                         <a href="{{ .RelPermalink }}">{{ T "ReadMore" }}</a>
                     </p>
