--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,8 +161,9 @@ body {
 }
 .logo-text {
   width: auto;
-  color: #000;
-  font-size: 24px;
+  color: #FF7E36;
+  font-size: 28px;
+  font: small-caps bold 24px/1 sans-serif;
   font-weight: 700;
   line-height: 57px;
   margin-right: 25px;
