--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,4 +20,6 @@
     {{- end }}
 
     {{ hugo.Generator }}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3090955890879034"
+     crossorigin="anonymous"></script>
 </head>
